[package]
description = "Substrate network types"
name = "sc-network-types"
version = "0.10.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors.workspace = true
edition.workspace = true
homepage = "https://substrate.io"
repository.workspace = true
documentation = "https://docs.rs/sc-network-types"

[dependencies]
bs58 = "0.4.0"
libp2p-identity = { version = "0.2.3", features = ["ed25519", "peerid"] }
litep2p = { git = "https://github.com/paritytech/litep2p", branch = "master" }
multiaddr = "0.18.1"
multihash = "0.19.1"
multihash-codetable = { version = "0.1.1", features = [    
    "digest",
    "serde",
    "sha2",
] }
rand = "0.8.5"
thiserror = "1.0.48"
